# serial-testing

./: .gitignore  CMakeLists.txt
inc/utility/: cr_serial.h  cr_utility.h
src/utility/: cr_serial.c  cr_utility.cpp
test/: hw_serial_TC.cpp  serial_TC.cpp  usb_serial_TC.cpp
